[package]
name = "anakin"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.101"
tree-sitter = "0.3.10"

[build-dependencies]
cc = "1.0.45"
